--- a/src/app/admin-prod/admin-prod.page.html
+++ b/src/app/admin-prod/admin-prod.page.html
@@ -25,17 +25,25 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let producto of productos">
+    <ion-item *ngFor="let producto of productos" class="product-item">
+      <img [src]="producto.imagen" alt="{{ producto.nombre }}" class="product-image" />
+      
+      <div class="product-info">
+        <h2 class="product-name">{{ producto.nombre }}</h2>
+        <p class="product-description">{{ producto.descripcion }}</p>
+        <p class="product-price">{{ producto.precio | currency }}</p>
+      </div>
 
-      <img [src]="producto.imagen" alt="{{ producto.nombre }}" style="width: 50px; height: 50px;">
-      <h2>{{ producto.nombre }}</h2>
-      <p>{{ producto.descripcion }}</p>
-      <p>{{ producto.precio | currency }}</p>
-      <ion-button color="warning" (click)="editarProducto(producto)"><ion-icon slot="start" name="create-outline"></ion-icon></ion-button>
-      <ion-button color="danger" (click)="eliminarProducto(producto.id)"><ion-icon slot="start" name="close-circle-outline"></ion-icon></ion-button>
+      <div class="action-buttons">
+        <ion-button class="edit-button" (click)="editarProducto(producto)">
+          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
+        </ion-button>
+        <ion-button class="delete-button" (click)="eliminarProducto(producto.id)">
+          <ion-icon slot="icon-only" name="close-circle-outline"></ion-icon>
+        </ion-button>
+      </div>
     </ion-item>
   </ion-list>
 </ion-content>
